--- a/portfolio.html
+++ b/portfolio.html
@@ -35,47 +35,62 @@
         </ul>
         <ul>
           <li>
-            <img src="./images/laptop.jpg" alt="ноутбук" />
+            <img src="./images/laptop.jpg" alt="ноутбук" width="370" height="294" />
             <h2>Технокряк</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="./images/basketball.jpg" alt="баскетболисты с мячом" />
+            <img
+              src="./images/basketball.jpg"
+              alt="баскетболисты с мячом"
+              width="370"
+              height="294"
+            />
             <h2>Постер New Orlean vs Golden Star</h2>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="./images/seafood.jpg" alt="рыба с названием ресторана" />
+            <img
+              src="./images/seafood.jpg"
+              alt="рыба с названием ресторана"
+              width="370"
+              height="294"
+            />
             <h2>Ресторан Seafood</h2>
             <p>Приложение</p>
           </li>
           <li>
-            <img src="./images/earphones.jpg" alt="наушники" />
+            <img src="./images/earphones.jpg" alt="наушники" width="370" height="294" />
             <h2>Проект Prime</h2>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="./images/boxes.jpg" alt="две коробки" />
+            <img src="./images/boxes.jpg" alt="две коробки" width="370" height="294" />
             <h2>Проект Boxes</h2>
             <p>Приложение</p>
           </li>
           <li>
-            <img src="./images/inspiration.jpg" alt="монитор" />
+            <img src="./images/inspiration.jpg" alt="монитор" width="370" height="294" />
             <h2>Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="./images/magazine.jpg" alt="журнал" />
+            <img src="./images/magazine.jpg" alt="журнал" width="370" height="294" />
             <h2>Издание Limited Edition</h2>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="./images/lab.jpg" alt="бирка" />
+            <img src="./images/lab.jpg" alt="бирка" width="370" height="294" />
             <h2>Проект LAB</h2>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="./images/growing-business.jpg" alt="печатает на ноутбуке" />
+            <img
+              src="./images/growing-business.jpg"
+              alt="печатает на ноутбуке"
+              width="370"
+              height="294"
+            />
             <h2>Growing Business</h2>
             <p>Приложение</p>
           </li>
