--- a/portfolio.html
+++ b/portfolio.html
@@ -10,16 +10,16 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="./index.html" class="logo-link"><span class="logo-accent">Web</span>Studio</a>
+        <ul class="nav">
+          <li><a href="./index.html" class="nav-link">Студия</a></li>
+          <li><a href="./portfolio.html" class="nav-link current-link">Портфолио</a></li>
+          <li><a href="" class="nav-link">Контакты</a></li>
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com" class="header-contacts">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="header-contacts">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
@@ -27,16 +27,16 @@
       <section>
         <!-- <h1>Наши проэкты</h1> -->
         <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li><button type="button" class="projects-link">Все</button></li>
+          <li><button type="button" class="projects-link">Веб-сайты</button></li>
+          <li><button type="button" class="projects-link">Приложения</button></li>
+          <li><button type="button" class="projects-link">Дизайн</button></li>
+          <li><button type="button" class="projects-link">Маркетинг</button></li>
         </ul>
         <ul>
           <li>
             <img src="./images/laptop.jpg" alt="ноутбук" width="370" height="294" />
-            <h2>Технокряк</h2>
+            <h2 class="project-name">Технокряк</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
@@ -46,7 +46,7 @@
               width="370"
               height="294"
             />
-            <h2>Постер New Orlean vs Golden Star</h2>
+            <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
             <p>Дизайн</p>
           </li>
           <li>
@@ -56,32 +56,32 @@
               width="370"
               height="294"
             />
-            <h2>Ресторан Seafood</h2>
+            <h2 class="project-name">Ресторан Seafood</h2>
             <p>Приложение</p>
           </li>
           <li>
             <img src="./images/earphones.jpg" alt="наушники" width="370" height="294" />
-            <h2>Проект Prime</h2>
+            <h2 class="project-name">Проект Prime</h2>
             <p>Маркетинг</p>
           </li>
           <li>
             <img src="./images/boxes.jpg" alt="две коробки" width="370" height="294" />
-            <h2>Проект Boxes</h2>
+            <h2 class="project-name">Проект Boxes</h2>
             <p>Приложение</p>
           </li>
           <li>
             <img src="./images/inspiration.jpg" alt="монитор" width="370" height="294" />
-            <h2>Inspiration has no Borders</h2>
+            <h2 class="project-name">Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
             <img src="./images/magazine.jpg" alt="журнал" width="370" height="294" />
-            <h2>Издание Limited Edition</h2>
+            <h2 class="project-name">Издание Limited Edition</h2>
             <p>Дизайн</p>
           </li>
           <li>
             <img src="./images/lab.jpg" alt="бирка" width="370" height="294" />
-            <h2>Проект LAB</h2>
+            <h2 class="project-name">Проект LAB</h2>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -91,18 +91,18 @@
               width="370"
               height="294"
             />
-            <h2>Growing Business</h2>
+            <h2 class="project-name">Growing Business</h2>
             <p>Приложение</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="/">WebStudio</a>
-      <address>
+    <footer class="footer-section">
+      <a href="/" class="footer-logo"><span class="logo-accent">Web</span>Studio</a>
+      <address class="address">
         г. Киев, пр-т Леси Украинки, 26 <br />
-        <a href="mailto:info@example.com">info@example.com</a> <br />
-        <a href="tel:+380991111111">+38 099 111 11 11</a>
+        <a href="mailto:info@example.com" class="footer-contacts">info@example.com</a> <br />
+        <a href="tel:+380991111111" class="footer-contacts">+38 099 111 11 11</a>
       </address>
     </footer>
   </body>
