--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
   </head>
@@ -25,16 +31,18 @@
     <main>
       <!------------------------------ Герой ---------------------------------->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
         <button type="button" class="button">Заказать услугу</button>
       </section>
       <!------------------ Наши преимущества ---------------------------------->
       <section class="features">
         <!--<h2>Наши преимущества</h2> -->
-        <ul>
+        <ul class="features-list">
           <li>
             <h3 class="features-title">Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <p class="features-text">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
           <li>
             <h3 class="features-title">Пунктуальность</h3>
@@ -57,7 +65,7 @@
       <!------------------------ Чем мы занимаемся ------------------------->
       <section class="activity">
         <h2 class="activity-title">Чем мы занимаемся</h2>
-        <ul>
+        <ul class="activity-list">
           <li>
             <img src="./images/img.jpg" alt="работа по блок схемам" width="370" height="294" />
           </li>
@@ -77,7 +85,7 @@
       <!----------------------- Наша команда ------------------------------------>
       <section class="team">
         <h2 class="team-title">Наша команда</h2>
-        <ul>
+        <ul class="team-list">
           <li>
             <img
               src="./images/igor.jpg"
@@ -86,12 +94,12 @@
               height="260"
             />
             <h3 class="teammate-name">Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <p class="teammate-post">Product Designer</p>
           </li>
           <li>
             <img src="./images/olga.jpg" alt="сотрудник ольга репина" width="270" height="260" />
             <h3 class="teammate-name">Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p class="teammate-post">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -101,7 +109,7 @@
               height="260"
             />
             <h3 class="teammate-name">Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p class="teammate-post">Marketing</p>
           </li>
           <li>
             <img
@@ -111,7 +119,7 @@
               height="260"
             />
             <h3 class="teammate-name">Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p class="teammate-post">UI Designer</p>
           </li>
         </ul>
       </section>
