--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
   </head>
@@ -26,18 +30,18 @@
       <!--Наши проэкты-->
       <section>
         <!-- <h1>Наши проэкты</h1> -->
-        <ul>
-          <li><button type="button" class="projects-link">Все</button></li>
-          <li><button type="button" class="projects-link">Веб-сайты</button></li>
-          <li><button type="button" class="projects-link">Приложения</button></li>
-          <li><button type="button" class="projects-link">Дизайн</button></li>
-          <li><button type="button" class="projects-link">Маркетинг</button></li>
+        <ul class="projects-filter">
+          <li><button type="button" class="projects-button">Все</button></li>
+          <li><button type="button" class="projects-button">Веб-сайты</button></li>
+          <li><button type="button" class="projects-button">Приложения</button></li>
+          <li><button type="button" class="projects-button">Дизайн</button></li>
+          <li><button type="button" class="projects-button">Маркетинг</button></li>
         </ul>
-        <ul>
+        <ul class="projects-list">
           <li>
             <img src="./images/laptop.jpg" alt="ноутбук" width="370" height="294" />
             <h2 class="project-name">Технокряк</h2>
-            <p>Веб-сайт</p>
+            <p class="project-type">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -47,7 +51,7 @@
               height="294"
             />
             <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <p class="project-type">Дизайн</p>
           </li>
           <li>
             <img
@@ -57,32 +61,32 @@
               height="294"
             />
             <h2 class="project-name">Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <p class="project-type">Приложение</p>
           </li>
           <li>
             <img src="./images/earphones.jpg" alt="наушники" width="370" height="294" />
             <h2 class="project-name">Проект Prime</h2>
-            <p>Маркетинг</p>
+            <p class="project-type">Маркетинг</p>
           </li>
           <li>
             <img src="./images/boxes.jpg" alt="две коробки" width="370" height="294" />
             <h2 class="project-name">Проект Boxes</h2>
-            <p>Приложение</p>
+            <p class="project-type">Приложение</p>
           </li>
           <li>
             <img src="./images/inspiration.jpg" alt="монитор" width="370" height="294" />
             <h2 class="project-name">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <p class="project-type">Веб-сайт</p>
           </li>
           <li>
             <img src="./images/magazine.jpg" alt="журнал" width="370" height="294" />
             <h2 class="project-name">Издание Limited Edition</h2>
-            <p>Дизайн</p>
+            <p class="project-type">Дизайн</p>
           </li>
           <li>
             <img src="./images/lab.jpg" alt="бирка" width="370" height="294" />
             <h2 class="project-name">Проект LAB</h2>
-            <p>Маркетинг</p>
+            <p class="project-type">Маркетинг</p>
           </li>
           <li>
             <img
@@ -92,7 +96,7 @@
               height="294"
             />
             <h2 class="project-name">Growing Business</h2>
-            <p>Приложение</p>
+            <p class="project-type">Приложение</p>
           </li>
         </ul>
       </section>
