--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo-link"><span class="logo-accent">Web</span>Studio</a>
+        <a href="/index.html" class="logo-link"><span class="logo-accent">Web</span>Studio</a>
         <ul class="nav">
           <li><a href="./index.html" class="nav-link current-link">Студия</a></li>
           <li><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
